<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>alien4cloud</groupId>
    <artifactId>alien4cloud-long-run-test</artifactId>
    <version>1.1.0-SM9-SNAPSHOT</version>

    <name>Long run testing.</name>

    <repositories>
        <repository>
            <id>repo.opensource.fastconnect.org</id>
            <url>https://fastconnect.org/maven/content/repositories/opensource</url>
        </repository>
        <repository>
            <id>org.openspaces</id>
            <name>OpenSpaces</name>
            <url>http://maven-repository.openspaces.org</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>repo.opensource.fastconnect.org</id>
            <url>https://fastconnect.org/maven/content/repositories/opensource</url>
        </repository>
        <snapshotRepository>
            <id>repo.opensource.snapshot.fastconnect.org</id>
            <url>https://fastconnect.org/maven/content/repositories/opensource-snapshot</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <java.version>1.7</java.version>
        <alien4cloud.version>${project.version}</alien4cloud.version>
        <maven.cargo.version>1.4.7</maven.cargo.version>
        <jetty.version>9.2.2.v20140723</jetty.version>
        <maven.compiler.version>2.3.2</maven.compiler.version>
        <lombok.version>1.14.4</lombok.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>alien4cloud</groupId>
            <artifactId>alien4cloud-rest-it</artifactId>
            <version>${alien4cloud.version}</version>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>alien4cloud</groupId>
            <artifactId>alien4cloud-rest-it</artifactId>
            <version>${alien4cloud.version}</version>
            <classifier>tests</classifier>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>1.2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>do-test</id>
            <activation>
                <property>
                    <name>doTest</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.16</version>
                        <configuration>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
